# goit-python

./: extensions.json  main.py  normalize.py  pyproject.toml
CORE/module_10/: check_homework.py  main.py  readme.md
CORE/module_11/: main.py  readme.md
CORE/module_12/: main.py
CORE/module_6/: main.py
CORE/module_7/: readme.md
CORE/module_8/: main.py  readme.md
CORE/module_9/: main.py
WEB/module_01/: addressbook.py  main.py  readme.md
WEB/module_01_my/: addressbook.py  main.py
WEB/module_01_team/: README.md  setup.py
WEB/module_02/: Dockerfile  pyproject.toml  readme.md
WEB/module_03/: factorize.py  factorize_test.py  main.py  normalize.py  readme.md
WEB/module_04/: Dockerfile  app.py  readme.md  submit_json.py
WEB/module_05/: Dockerfile  __main__.py  _old_webserver.py  aiowebserver.py  app.py  app_config.py  docker-compose.yml  index.html  main.js  main.py  pyproject.toml  readme.md  requirements.txt  sockserver.py  webserver.py
WEB/module_06/: db.sqlite3  main.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  readme.md
WEB/module_07/: main.py  model.py  my_select.py  mydatabase.db  readme.md  seed.py
WEB/module_08/: connect.py  connect_redis.py  consumer.py  main.py  model.py  model_contact.py  producer.py  readme.md  test_contacts.py
WEB/module_09/: con_redis.py  main.py  (+2 more)
module_10/: main.py  test.py
module_11/: main.py  readme.md
module_12/: main.py  readme.md
module_6/: main.py
module_7/: readme.md
module_8/: main.py
module_9/: main.py
(+88 files in other folders)
