[tool.poetry]
name = "goit-python"
version = "0.1.0"
description = ""
authors = ["d43v30n <anjey.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^21.0.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
